IMPROVED UI & 4 PAGES & setting& Profile

--- a/WebContent/MainPage.html
+++ b/WebContent/MainPage.html
@@ -47,6 +47,13 @@
   </head>
 
   <body>
+     <div class="row">
+     	<div class="bs-component icons-material" align= "center" >
+  	 		<div class="icon-preview"><i class="mdi-action-face-unlock"></i><span></span></div>
+  	 		<div class="icon-preview"><i class="mdi-navigation-apps"></i><span>mdi-navigation-apps</span></div>
+  	 	</div>
+  	 </div>	
+  			
     <div class="container">
       <div class="row">
      
